--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,24 +13,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-05-26 Fri 15:31]
+#+CAPTION: Clock summary at [2017-05-26 Fri 15:38]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *25:06* |       |       | 100.0 |
+| *Total time*                                                                | *25:12* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 25:06   |       |       | 100.0 |
-| Active                                                                      |         | 25:06 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  6:36 |  26.3 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   3.3 |
-| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  17.6 |
-| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   9.2 |
-| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  43.1 |
+| Stories                                                                     | 25:12   |       |       | 100.0 |
+| Active                                                                      |         | 25:12 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  26.6 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   3.2 |
+| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  17.5 |
+| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   9.1 |
+| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  42.9 |
 | STARTED WIX Path has changed on appveyor                                    |         |       |  0:09 |   0.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-05-26 Fri 15:32]--[2017-05-26 Fri 15:38] =>  0:06
     CLOCK: [2017-05-26 Fri 14:02]--[2017-05-26 Fri 15:21] =>  1:19
     CLOCK: [2017-04-14 Fri 11:31]--[2017-04-14 Fri 13:05] =>  1:34
     CLOCK: [2017-04-13 Thu 06:29]--[2017-04-13 Thu 07:21] =>  0:52
