--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,20 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-05-26 Fri 15:38]
+#+CAPTION: Clock summary at [2017-06-02 Fri 11:56]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *25:12* |       |       | 100.0 |
+| *Total time*                                                                | *25:52* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 25:12   |       |       | 100.0 |
-| Active                                                                      |         | 25:12 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  26.6 |
+| Stories                                                                     | 25:52   |       |       | 100.0 |
+| Active                                                                      |         | 25:52 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  25.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   3.2 |
-| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  17.5 |
-| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   9.1 |
-| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  42.9 |
+| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  17.1 |
+| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   8.9 |
+| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  41.8 |
 | STARTED WIX Path has changed on appveyor                                    |         |       |  0:09 |   0.6 |
+| STARTED Move element segmentation into yarn                                 |         |       |  0:40 |   2.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -303,7 +304,8 @@ The right way to do this is to use the WIX environment variable:
 
 - [[https://github.com/appveyor/ci/issues/1267][Add WiX toolset to PATH]]
 
-*** Move element segmentation into yarn                               :story:
+*** STARTED Move element segmentation into yarn                       :story:
+    CLOCK: [2017-06-02 Fri 11:16]--[2017-06-02 Fri 11:56] =>  0:40
 
 We've added the notion that an element can be composed of other
 elements in quilt, in order to handle forward declarations. However,
@@ -311,6 +313,24 @@ with a little bit of effort we can generalise it into yarn. It would
 be useful for other things such as inner classes. We don't need to
 actually implement inner classes right now but we should make sure the
 moving of this feature into yarn is compatible with it.
+
+Notes:
+
+- seems like we have two use cases: a) we need all elements, master
+  and extensions and we don't really care about which is which. b) we
+  only want masters. However, we must be able to access the same
+  element properties from either the master or the extension. Having
+  said all that, it seems we don't really need all of the element
+  properties for both - forward declarations probably only need:
+  decoration and artefact properties.
+- we don't seem to use the map in formattables model anywhere, other
+  than to find master/extension elements.
+- Yarn model could have two simple list containers (masters and
+  all). Or maybe we don't even need this to start off with, we can
+  just iterate and skip extensions where required.
+- so in conclusion, we to move decoration, enablement and dependencies
+  into yarn (basically decoration and artefact properties) first and
+  then see where segmentation ends.
 
 *** Move decoration into yarn                                         :story:
 
