yarn: rename injector to external expander

--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,22 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-06-02 Fri 14:11]
+#+CAPTION: Clock summary at [2017-06-02 Fri 17:37]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *26:52* |       |       | 100.0 |
+| *Total time*                                                                | *28:41* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 26:52   |       |       | 100.0 |
-| Active                                                                      |         | 26:52 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  24.9 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   3.0 |
-| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  16.4 |
-| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   8.6 |
-| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  40.3 |
-| STARTED WIX Path has changed on appveyor                                    |         |       |  0:09 |   0.6 |
-| STARTED Move element segmentation into yarn                                 |         |       |  0:40 |   2.5 |
-| STARTED Move decoration into yarn                                           |         |       |  1:00 |   3.7 |
+| Stories                                                                     | 28:41   |       |       | 100.0 |
+| Active                                                                      |         | 28:41 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  23.4 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   2.8 |
+| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  15.4 |
+| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   8.0 |
+| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  37.7 |
+| STARTED WIX Path has changed on appveyor                                    |         |       |  0:09 |   0.5 |
+| STARTED Move element segmentation into yarn                                 |         |       |  0:40 |   2.3 |
+| STARTED Move decoration into yarn                                           |         |       |  2:49 |   9.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -334,6 +334,7 @@ Notes:
   then see where segmentation ends.
 
 *** STARTED Move decoration into yarn                                 :story:
+    CLOCK: [2017-06-02 Fri 15:04]--[2017-06-02 Fri 16:02] =>  0:58
     CLOCK: [2017-06-02 Fri 14:12]--[2017-06-02 Fri 15:03] =>  0:51
     CLOCK: [2017-06-02 Fri 13:11]--[2017-06-02 Fri 14:11] =>  1:00
 
