--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,22 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-06-03 Sat 16:27]
+#+CAPTION: Clock summary at [2017-06-04 Sun 08:58]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *30:05* |       |       | 100.0 |
+| *Total time*                                                                | *30:45* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 30:05   |       |       | 100.0 |
-| Active                                                                      |         | 30:05 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  22.3 |
+| Stories                                                                     | 30:45   |       |       | 100.0 |
+| Active                                                                      |         | 30:45 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  21.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   2.7 |
-| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  14.7 |
+| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  14.4 |
 | COMPLETED WIX Path has changed on appveyor                                  |         |       |  0:09 |   0.5 |
-| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   7.6 |
-| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  36.0 |
+| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   7.5 |
+| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  35.2 |
 | STARTED Move element segmentation into yarn                                 |         |       |  0:40 |   2.2 |
-| STARTED Move decoration into yarn                                           |         |       |  4:13 |  14.0 |
+| STARTED Move decoration into yarn                                           |         |       |  4:53 |  15.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -335,6 +335,9 @@ Notes:
   then see where segmentation ends.
 
 *** STARTED Move decoration into yarn                                 :story:
+    CLOCK: [2017-06-04 Sun 08:43]--[2017-06-04 Sun 08:58] =>  0:15
+    CLOCK: [2017-06-03 Sat 16:36]--[2017-06-03 Sat 16:54] =>  0:18
+    CLOCK: [2017-06-03 Sat 16:28]--[2017-06-03 Sat 16:35] =>  0:07
     CLOCK: [2017-06-03 Sat 16:09]--[2017-06-03 Sat 16:27] =>  0:18
     CLOCK: [2017-06-03 Sat 15:02]--[2017-06-03 Sat 16:08] =>  1:06
     CLOCK: [2017-06-02 Fri 15:04]--[2017-06-02 Fri 16:02] =>  0:58
