--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,22 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-06-04 Sun 15:19]
+#+CAPTION: Clock summary at [2017-06-04 Sun 16:54]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *31:22* |       |       | 100.0 |
+| *Total time*                                                                | *32:56* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 31:22   |       |       | 100.0 |
-| Active                                                                      |         | 31:22 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  21.4 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   2.6 |
-| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  14.1 |
+| Stories                                                                     | 32:56   |       |       | 100.0 |
+| Active                                                                      |         | 32:56 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  20.3 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   2.5 |
+| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  13.4 |
 | COMPLETED WIX Path has changed on appveyor                                  |         |       |  0:09 |   0.5 |
-| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   7.3 |
-| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  34.5 |
-| STARTED Move element segmentation into yarn                                 |         |       |  0:40 |   2.1 |
-| STARTED Move decoration into yarn                                           |         |       |  5:30 |  17.5 |
+| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   7.0 |
+| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  32.8 |
+| STARTED Move element segmentation into yarn                                 |         |       |  0:40 |   2.0 |
+| STARTED Move decoration into yarn                                           |         |       |  7:04 |  21.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -335,6 +335,7 @@ Notes:
   then see where segmentation ends.
 
 *** STARTED Move decoration into yarn                                 :story:
+    CLOCK: [2017-06-04 Sun 15:20]--[2017-06-04 Sun 16:54] =>  1:34
     CLOCK: [2017-06-04 Sun 15:12]--[2017-06-04 Sun 15:19] =>  0:07
     CLOCK: [2017-06-04 Sun 14:41]--[2017-06-04 Sun 15:11] =>  0:30
     CLOCK: [2017-06-04 Sun 08:43]--[2017-06-04 Sun 08:58] =>  0:15
