--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,22 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-06-04 Sun 17:19]
+#+CAPTION: Clock summary at [2017-06-04 Sun 17:38]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *33:04* |       |       | 100.0 |
+| *Total time*                                                                | *33:34* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 33:04   |       |       | 100.0 |
-| Active                                                                      |         | 33:04 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  20.3 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   2.5 |
-| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  13.4 |
-| COMPLETED WIX Path has changed on appveyor                                  |         |       |  0:09 |   0.5 |
-| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   7.0 |
-| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  32.7 |
+| Stories                                                                     | 33:34   |       |       | 100.0 |
+| Active                                                                      |         | 33:34 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  20.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   2.4 |
+| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  13.2 |
+| COMPLETED WIX Path has changed on appveyor                                  |         |       |  0:09 |   0.4 |
+| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   6.9 |
+| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  32.2 |
 | STARTED Move element segmentation into yarn                                 |         |       |  0:40 |   2.0 |
-| STARTED Move decoration into yarn                                           |         |       |  7:12 |  21.8 |
+| STARTED Move decoration into yarn                                           |         |       |  7:42 |  22.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -335,7 +335,8 @@ Notes:
   then see where segmentation ends.
 
 *** STARTED Move decoration into yarn                                 :story:
-    CLOCK: [2017-06-04 Sun 17:04]
+    CLOCK: [2017-06-04 Sun 17:23]--[2017-06-04 Sun 17:34] =>  0:11
+    CLOCK: [2017-06-04 Sun 17:04]--[2017-06-04 Sun 17:23] =>  0:19
     CLOCK: [2017-06-04 Sun 16:55]--[2017-06-04 Sun 17:03] =>  0:08
     CLOCK: [2017-06-04 Sun 15:20]--[2017-06-04 Sun 16:54] =>  1:34
     CLOCK: [2017-06-04 Sun 15:12]--[2017-06-04 Sun 15:19] =>  0:07
