--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,22 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-06-04 Sun 17:45]
+#+CAPTION: Clock summary at [2017-06-04 Sun 17:56]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *33:44* |       |       | 100.0 |
+| *Total time*                                                                | *33:53* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 33:44   |       |       | 100.0 |
-| Active                                                                      |         | 33:44 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  19.9 |
+| Stories                                                                     | 33:53   |       |       | 100.0 |
+| Active                                                                      |         | 33:53 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  19.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   2.4 |
-| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  13.1 |
+| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  13.0 |
 | COMPLETED WIX Path has changed on appveyor                                  |         |       |  0:09 |   0.4 |
+| COMPLETED Move decoration into yarn                                         |         |       |  8:01 |  23.7 |
 | STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   6.8 |
-| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  32.1 |
+| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  31.9 |
 | STARTED Move element segmentation into yarn                                 |         |       |  0:40 |   2.0 |
-| STARTED Move decoration into yarn                                           |         |       |  7:52 |  23.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -210,6 +210,48 @@ The right way to do this is to use the WIX environment variable:
 
 - [[https://github.com/appveyor/ci/issues/1267][Add WiX toolset to PATH]]
 
+*** COMPLETED Move decoration into yarn                               :story:
+    CLOSED: [2017-06-04 Sun 17:55]
+    CLOCK: [2017-06-04 Sun 17:46]--[2017-06-04 Sun 17:55] =>  0:09
+    CLOCK: [2017-06-04 Sun 17:35]--[2017-06-04 Sun 17:45] =>  0:10
+    CLOCK: [2017-06-04 Sun 17:23]--[2017-06-04 Sun 17:34] =>  0:11
+    CLOCK: [2017-06-04 Sun 17:04]--[2017-06-04 Sun 17:23] =>  0:19
+    CLOCK: [2017-06-04 Sun 16:55]--[2017-06-04 Sun 17:03] =>  0:08
+    CLOCK: [2017-06-04 Sun 15:20]--[2017-06-04 Sun 16:54] =>  1:34
+    CLOCK: [2017-06-04 Sun 15:12]--[2017-06-04 Sun 15:19] =>  0:07
+    CLOCK: [2017-06-04 Sun 14:41]--[2017-06-04 Sun 15:11] =>  0:30
+    CLOCK: [2017-06-04 Sun 08:43]--[2017-06-04 Sun 08:58] =>  0:15
+    CLOCK: [2017-06-03 Sat 16:36]--[2017-06-03 Sat 16:54] =>  0:18
+    CLOCK: [2017-06-03 Sat 16:28]--[2017-06-03 Sat 16:35] =>  0:07
+    CLOCK: [2017-06-03 Sat 16:09]--[2017-06-03 Sat 16:27] =>  0:18
+    CLOCK: [2017-06-03 Sat 15:02]--[2017-06-03 Sat 16:08] =>  1:06
+    CLOCK: [2017-06-02 Fri 15:04]--[2017-06-02 Fri 16:02] =>  0:58
+    CLOCK: [2017-06-02 Fri 14:12]--[2017-06-02 Fri 15:03] =>  0:51
+    CLOCK: [2017-06-02 Fri 13:11]--[2017-06-02 Fri 14:11] =>  1:00
+
+We need to handle decorations from yarn, since its common to all
+kernels.
+
+Done:
+
+- move injection to last in second stage expansion. This proves there
+  are no dependencies with other expansion steps.
+- rename injection to external expansion. Ensure there are no injector
+  remnants in terms of terminology in yarn. Use expansion error
+  instead of injection error.
+- add parameters required for decoration expansion. Drill across the
+  APIs to supply those parameters.
+- move creation of drp and dpf into yarn workflow.
+- revert all changes to knit and quilt. We'll just recreate drp/dpf in
+  quilt for now.
+- add element properties and decoration properties to yarn.
+- create a kernel based top-level expander that includes other
+  expanders.
+- create a decoration expander based on external expansion
+  interface. Populate decoration properties.
+- update assistant to read decoration properties from yarn.
+- remove decoration properties from quilt cpp and csharp.
+
 *** STARTED Add support for proper JSON serialisation in C++          :story:
     CLOCK: [2017-04-12 Wed 20:56]--[2017-04-12 Wed 23:14] =>  2:18
 
@@ -333,49 +375,6 @@ Notes:
 - so in conclusion, we to move decoration, enablement and dependencies
   into yarn (basically decoration and artefact properties) first and
   then see where segmentation ends.
-
-*** STARTED Move decoration into yarn                                 :story:
-    CLOCK: [2017-06-04 Sun 17:35]--[2017-06-04 Sun 17:45] =>  0:10
-    CLOCK: [2017-06-04 Sun 17:23]--[2017-06-04 Sun 17:34] =>  0:11
-    CLOCK: [2017-06-04 Sun 17:04]--[2017-06-04 Sun 17:23] =>  0:19
-    CLOCK: [2017-06-04 Sun 16:55]--[2017-06-04 Sun 17:03] =>  0:08
-    CLOCK: [2017-06-04 Sun 15:20]--[2017-06-04 Sun 16:54] =>  1:34
-    CLOCK: [2017-06-04 Sun 15:12]--[2017-06-04 Sun 15:19] =>  0:07
-    CLOCK: [2017-06-04 Sun 14:41]--[2017-06-04 Sun 15:11] =>  0:30
-    CLOCK: [2017-06-04 Sun 08:43]--[2017-06-04 Sun 08:58] =>  0:15
-    CLOCK: [2017-06-03 Sat 16:36]--[2017-06-03 Sat 16:54] =>  0:18
-    CLOCK: [2017-06-03 Sat 16:28]--[2017-06-03 Sat 16:35] =>  0:07
-    CLOCK: [2017-06-03 Sat 16:09]--[2017-06-03 Sat 16:27] =>  0:18
-    CLOCK: [2017-06-03 Sat 15:02]--[2017-06-03 Sat 16:08] =>  1:06
-    CLOCK: [2017-06-02 Fri 15:04]--[2017-06-02 Fri 16:02] =>  0:58
-    CLOCK: [2017-06-02 Fri 14:12]--[2017-06-02 Fri 15:03] =>  0:51
-    CLOCK: [2017-06-02 Fri 13:11]--[2017-06-02 Fri 14:11] =>  1:00
-
-We need to handle decorations from yarn, since its common to all
-kernels.
-
-Done:
-
-- move injection to last in second stage expansion. This proves there
-  are no dependencies with other expansion steps.
-- rename injection to external expansion. Ensure there are no injector
-  remnants in terms of terminology in yarn. Use expansion error
-  instead of injection error.
-- add parameters required for decoration expansion. Drill across the
-  APIs to supply those parameters.
-- move creation of drp and dpf into yarn workflow.
-- revert all changes to knit and quilt. We'll just recreate drp/dpf in
-  quilt for now.
-- add element properties and decoration properties to yarn.
-
-To do:
-
-- create a kernel based top-level expander that includes other
-  expanders.
-- create a decoration expander based on external expansion
-  interface. Populate decoration properties.
-- update assistant to read decoration properties from yarn.
-- remove decoration properties from quilt cpp and csharp.
 
 *** Move enablement into yarn                                         :story:
 
