--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-06-04 Sun 18:19]
+#+CAPTION: Clock summary at [2017-06-04 Sun 18:23]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *34:16* |       |       | 100.0 |
+| *Total time*                                                                | *34:19* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 34:16   |       |       | 100.0 |
-| Active                                                                      |         | 34:16 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  19.6 |
+| Stories                                                                     | 34:19   |       |       | 100.0 |
+| Active                                                                      |         | 34:19 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  19.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   2.4 |
 | COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  12.9 |
 | COMPLETED WIX Path has changed on appveyor                                  |         |       |  0:09 |   0.4 |
-| COMPLETED Move decoration into yarn                                         |         |       |  8:24 |  24.5 |
+| COMPLETED Move decoration into yarn                                         |         |       |  8:27 |  24.6 |
 | STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   6.7 |
-| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  31.6 |
+| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  31.5 |
 | STARTED Move element segmentation into yarn                                 |         |       |  0:40 |   1.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -212,6 +212,7 @@ The right way to do this is to use the WIX environment variable:
 
 *** COMPLETED Move decoration into yarn                               :story:
     CLOSED: [2017-06-04 Sun 17:55]
+    CLOCK: [2017-06-04 Sun 18:20]--[2017-06-04 Sun 18:23] =>  0:03
     CLOCK: [2017-06-04 Sun 17:56]--[2017-06-04 Sun 18:19] =>  0:23
     CLOCK: [2017-06-04 Sun 17:46]--[2017-06-04 Sun 17:55] =>  0:09
     CLOCK: [2017-06-04 Sun 17:35]--[2017-06-04 Sun 17:45] =>  0:10
